kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: movieverse
  labels:
    name: movieverse
    environment: production
    app.kubernetes.io/name: movieverse
